--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rímskokatolícka cirkev, farnosť Revúca</title>
-    <link rel="icon" type="image/x-icon" href="/public/assets/logo RKC(transparent).png">
+    <link rel="icon" type="image/x-icon" href="./public/assets/logo RKC(transparent).png">
     <meta name="description" content="Oficiálna stránka Rímskokatolíckej farnosti v Revúcej.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <header class="header container">
         <div class="header__name">
-            <a href="index.html"><img class="header__logo" src="/public/assets/logo RKC(transparent).png" alt="mainLogo"></a>
+            <a href="index.html"><img class="header__logo" src="./public/assets/logo RKC(transparent).png" alt="mainLogo"></a>
             <a class="header__text" href="index.html"><h1 class="header__text-h">Rímskokatolícka cirkev,<br>farnosť Revúca</h1></a>
         </div>
         <nav>
@@ -85,7 +85,7 @@
     <!-- End Of Mobile Nav -->
     <main>
         <section class="hero container">
-            <img class="hero__img" src="/public/assets/images.jpg" alt="svatostanok obrazok">
+            <img class="hero__img" src="./public/assets/images.jpg" alt="svatostanok obrazok">
             <div class="hero__text">
                 <h2 class="hero__subtitle">
                     Vitajte na webovej stránke
