added about and donate section

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <nav>
             <ul class="header__menu">
-                <li><a class="header__link" href="">Domov</a></li>
-                <li><a class="header__link" href="">Farnosť</a></li>
+                <li><a class="header__link" href="#Home">Domov</a></li>
+                <li><a class="header__link" href="#About">Farnosť</a></li>
                 <li><a class="header__link" href="">Život Kresťana</a></li>
                 <li><a class="header__link" href="">Farské oznamy</a></li>
                 <li class="header__line"></li>
@@ -50,10 +50,10 @@
      <div class="mobile-nav">
         <nav>
             <ul class="mobile-nav__menu">
-                <li><a class="mobile-nav__link" href="">
+                <li><a class="mobile-nav__link" href="#Home">
                     Domov
                 </a></li>
-                <li><a class="mobile-nav__link" href="">
+                <li><a class="mobile-nav__link" href="#About">
                     Farnosť
                 </a></li>
                 <li><a class="mobile-nav__link" href="">
@@ -91,19 +91,43 @@
                     Vitajte na webovej stránke
                 </h2>
                 <h1 class="hero__title">
-                     farnosti Revúca!
+                     farnosti <strong>Revúca</strong>!
                 </h1>
                 <p class="hero__description">
                     Sme radi, že ste nás navštívili. Srdečne Vás pozývame na spoločné prežívanie viery a duchovného rastu.
                 </p>
             </div>
         </section>
-        <!-- <section class="about container"></section> -->
+        <section id="About" class="about container section">
+            <img class="about__img" src="/public/assets/kostol-von.jpg" alt="kostol-von">
+            <div class="about__text">
+            <h2 class="about__title">
+                Kto sme?
+            </h2>
+                <p class="about__description">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam quisquam commodi ipsam laborum, nulla animi fugiat in vero odio. Exercitationem laboriosam illum beatae voluptatum, voluptatibus repellat deserunt ipsum omnis autem?
+                </p>
+            </div>
+        </section>
         <!-- <section class="events container"></section> -->
         <!-- <section class="latest container"></section> -->
         <!-- <section class="resources container"></section> -->
         <!-- <section class="get-involved container"></section> -->
-        <!-- <section class="donate container"></section> -->
+        <section class="donate container">
+            <img class="donate__img" src="/public/assets/donate.png" alt="donation qr code">
+            <div class="donate__text">
+                <h2 class="donate__title">
+                    Finančná podpora
+                </h2>
+                <p class="donate__description">
+                    Peniaze mozete poslat na nase cislo uctu:<br>
+                    <strong>SK00 0000 0000 0000 0000</strong><br>
+                    alebo oskenujte tento qr kód.
+                </p>
+
+            </div>
+
+        </section>
     </main>
     <footer class="footer container section">
         <h3 class="footer__gpdr">
