bad image idresses

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
         </section>
         <section id="About" class="about container section">
-            <img class="about__img" src="/public/assets/kostol-von.jpg" alt="kostol-von">
+            <img class="about__img" src="./public/assets/kostol-von.jpg" alt="kostol-von">
             <div class="about__text">
             <h2 class="about__title">
                 Kto sme?
@@ -114,7 +114,7 @@
         <!-- <section class="resources container"></section> -->
         <!-- <section class="get-involved container"></section> -->
         <section class="donate container">
-            <img class="donate__img" src="/public/assets/donate.png" alt="donation qr code">
+            <img class="donate__img" src="./public/assets/donate.png" alt="donation qr code">
             <div class="donate__text">
                 <h2 class="donate__title">
                     Finančná podpora
